# newton-system-solver-gui

./: .gitignore  CMakeLists.txt  README.md
include/: Interval.h  LibraryAPI.h  LibraryInterface.h  LibraryInterfaceInterval.h  MainWindow.h  NewtonSystem.h  NewtonSystemInterval.h  Solver.h  SolverInterval.h  SolverStatus.h  Util.h
lib/: ExampleLibrary.cpp  ExampleLibrary2.cpp  ExampleLibrary3.cpp  ExampleLibrary3Interval.cpp  Lib1Quadratic.cpp  Lib2ExampleA.cpp  Lib2ExampleAInterval.cpp  Lib3ExampleC.cpp  Lib3ExampleCInterval.cpp
src/: MainWindow.cpp  NewtonSystem.cpp  NewtonSystemInterval.cpp  NewtonSystemRewrite.cpp  NewtonSystemRewrite.cpp.changed  NewtonSystemRewriteInterval.cpp  NewtonSystemRewriteInterval.cpp.changed  Solver.cpp  SolverInterval.cpp  main.cpp
